--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-.mvn/wrapper/maven-wrapper.jar
+# .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 /node_modules/
@@ -36,5 +36,5 @@ build/
 ### Arquivos ###
 *.zip
 *.odt
-*.properties
+# *.properties/
 *.txt
